day 1 task done

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
       <!-- Quiz View -->
       <!-- Note: this view is shown initially and for each question -->
-      <div id="quizView" class="view">
+      <div id="quizView" class="view"></div>
         <div id="progress">
           <div id="progressBar"></div>
         </div>
