html error solved & starting day 4 tasks

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
       <!-- Quiz View -->
       <!-- Note: this view is shown initially and for each question -->
-      <div id="quizView" class="view"></div>
+      <div id="quizView" class="view">
         <div id="progress">
           <div id="progressBar"></div>
         </div>
@@ -39,7 +39,7 @@
           <div id="result"></div>
         </div>
         <!-- The below 'Restart Quiz' button is commented out because it is not used initially -->
-        <!-- <button id="restartButton" class="button-secondary">Restart Quiz</button> -->
+        <button id="restartButton" class="button-secondary">Restart Quiz</button>
       </div>
     </div>
 
